icono de notificacion

--- a/src/main/resources/static/activos.html
+++ b/src/main/resources/static/activos.html
@@ -105,9 +105,15 @@
             <h1>MACOMSY</h1>
         </span>
         <!-- Icono de perfil -->
-        <div class="profile-icon">
-            
+         <!-- Icono de perfil -->
+         <div class="profile-icon">
             <i class="fas fa-user-circle"></i>
+            <span class="admin-text">Admin</span>
+        </div>
+        <!-- Icono de notificación -->
+        <div class="notification-icon">
+            <i class="fas fa-bell"></i>
+        </div>
             <span class="admin-text">Admin</span>
         </div>
         <!-- Menú de opciones de perfil -->
