--- a/src/main/resources/static/inicioMa.html
+++ b/src/main/resources/static/inicioMa.html
@@ -74,13 +74,17 @@
     <header>
       <span id="title_header" class="show_title">
         <h1>MACOMSY</h1>
+        
       </span>
       <!-- Icono de perfil -->
-
       <div class="profile-icon">
         <i class="fas fa-user-circle"></i>
         <span class="admin-text">Admin</span>
-      </div>
+    </div>
+    <!-- Icono de notificación -->
+    <div class="notification-icon">
+        <i class="fas fa-bell"></i>
+    </div>
       <!-- Menú de opciones de perfil -->
       <div class="profile-options">
         <ul>
@@ -117,7 +121,7 @@
             <h4>Activos</h4>
           </div>
         </a>
-
+        
         <a href="reporteMantenimiento.html" class="selected">
           <div class="opcion">
             <i class="fa-solid fa-wrench" title="Mantenimiento"></i>
