--- a/src/main/resources/static/instalaciones.html
+++ b/src/main/resources/static/instalaciones.html
@@ -128,11 +128,14 @@
         <span id="title_header" class="show_title">
           <h1>MACOMSY</h1>
         </span>
-        <!-- Icono de perfil -->
-  
-        <div class="profile-icon">
-          <i class="fas fa-user-circle"></i>
-          <span class="admin-text">Admin</span>
+         <!-- Icono de perfil -->
+         <div class="profile-icon">
+            <i class="fas fa-user-circle"></i>
+            <span class="admin-text">Admin</span>
+        </div>
+        <!-- Icono de notificación -->
+        <div class="notification-icon">
+            <i class="fas fa-bell"></i>
         </div>
         <!-- Menú de opciones de perfil -->
         <div class="profile-options">
