--- a/src/main/resources/static/reporteMantenimiento.html
+++ b/src/main/resources/static/reporteMantenimiento.html
@@ -138,9 +138,15 @@
             <h1>MACOMSY</h1>
         </span>
         <!-- Icono de perfil -->
-        <div class="profile-icon">
-
-            <i class="fas fa-user-circle"></i>
+      <!-- Icono de perfil -->
+      <div class="profile-icon">
+        <i class="fas fa-user-circle"></i>
+        <span class="admin-text">Admin</span>
+    </div>
+    <!-- Icono de notificación -->
+    <div class="notification-icon">
+        <i class="fas fa-bell"></i>
+    </div>
             <span class="admin-text">Admin</span>
         </div>
 
